--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Dashboard</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<!-- changes done to see in git -->
 
 <body>
     <div class="d-flex" id="wrapper">
